--- a/style.css
+++ b/style.css
@@ -39,3 +39,24 @@
     color: #555;
     margin-top: 5px;
 }
+#titulo-intro {
+    font-size: 2.5em;
+    font-weight: bold;
+    text-align: left;
+    width: 300px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+    margin: 10px 0 20px 10px;
+    width: 100%;
+    margin-top: 30px;
+}
+#contenido{
+    font-size: 1.6em;
+    text-align: left;
+    width: 300px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+    margin: 10px 0 20px 10px;
+    width: 100%;
+    margin-top: 30px;
+}
