--- a/style.css
+++ b/style.css
@@ -61,3 +61,26 @@
 span {
     font-weight: bold;
 }
+.contacto {
+    font-size: 1.8em;
+    text-align: left;
+    width: 75%;
+    margin: 30px 0;
+}
+
+.contacto img {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+.contacto a {
+    text-decoration: none;
+    color: #000;
+    margin-right: 20px;
+}
+
+p span {
+    font-weight: bold;
+}
