--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ span {
     text-align: left;
     width: 25%;
     margin: 0;
-    background-color: rgba(109, 132, 153, 0.8); /* Fondo semi-transparente */
+    background-color: rgba(109, 132, 153, 0.8);
     padding: 10px;
     border-radius: 10px;
 }
@@ -103,4 +103,34 @@ body {
     background-attachment: fixed;
     font-family: 'Sansation', sans-serif;
     color: #222;
+}
+#titulo-intro {
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    width: 300px;
+    margin-left: 0px;
+    margin-bottom: 20px;
+    margin: 10px 0 20px 10px;
+    width: 85%;
+    margin-top: 30px;
+}
+
+#aboutme {
+    font-family: 'Sansation', sans-serif;
+    font-size: 1.4em;
+    text-align: center;
+    width: 85%;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+
+#aboutme h1 {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+#aboutme p {
+    margin-bottom: 20px;
 }
